[package]
name = "cow-say-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serenity = "0.12.1"
tokio = { version = "1.36.0", features = ["macros", "full"] }
tokio-listener = "0.3.1"
